Basic functionality implemented; ball direction and velocity can be selected by timing, and the ball travels at the selected velocity reducing its speed until 0.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ SET(Minigolf_SOURCE_FILES
 	main.c
 	data.c
 	linkedlist.c
-	cuptee.c
+	objects.c
 	)
 
 ADD_EXECUTABLE(Minigolf ${Minigolf_SOURCE_FILES})
