Couple new test holes. Ball now bounces against sides and enters new tiles, following the shape of the land.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,8 +6,11 @@ INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${GLU_INCLUDE_DIR} ${GLUT_INCLUDE_DIR}
 SET(MinigolfTest_SOURCE_FILES 
 	testmain.c
 	testlinkedlist.c
+	testphysics.c
 	
 	../src/linkedlist.c
+	../src/physics.c
+	../src/objects.c
 	)
 	
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/test ${PROJECT_SOURCE_DIR}/src)
