added test for parsing, working on string parsing function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(MinigolfTest_SOURCE_FILES
 	testmain.c
 	testlinkedlist.c
 	testphysics.c
+	testfileparsing.c
 	
 	../src/linkedlist.c
 	../src/physics.c
