Add FindGLUI module and add the GLUI lib to everything. Fix gitignore.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
 cmake_minimum_required(VERSION 2.0)
 PROJECT(Minigolf)
 
+SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
+
 FIND_PACKAGE(OpenGL)
 FIND_PACKAGE(GLUT)
+FIND_PACKAGE(GLUI)
 
 SET(CMAKE_C_FLAGS "-g -Wall")
+SET(CMAKE_CXX_FLAGS "-g -Wall")
 
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
