--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 2.0)
 PROJECT(Minigolf)
 
-INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR} ${GLU_INCLUDE_DIR} ${GLUT_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(${GLUI_INCLUDE_DIR} ${GLUT_INCLUDE_DIR} ${GLU_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
 
 SET(Minigolf_SOURCE_FILES 
-	main.c
-	data.c
-	linkedlist.c
-	objects.c
-	physics.c
+	main.cpp
+	data.cpp
+	linkedlist.cpp
+	objects.cpp
+	physics.cpp
 	)
 
 ADD_EXECUTABLE(Minigolf ${Minigolf_SOURCE_FILES})
 TARGET_LINK_LIBRARIES(Minigolf
-	${OPENGL_LIBRARIES} ${GLU_LIBRARIES} ${GLUT_LIBRARIES})
+	${GLUI_LIBRARIES} ${GLUT_LIBRARIES} ${GLU_LIBRARIES} ${OPENGL_LIBRARIES})
