--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,12 @@ FIND_PACKAGE(OpenGL)
 FIND_PACKAGE(GLUT)
 FIND_PACKAGE(GLUI)
 
+IF(WIN32)
+	FIND_LIBRARY(WSOCK32_LIBRARY wsock32)
+	FIND_LIBRARY(WS2_32_LIBRARY ws2_32)
+	LIST_SPACES_APPEND_ONCE(CMAKE_C_STANDARD_LIBRARIES ${WSOCK32_LIBRARY} ${WS2_32_LIBRARY})
+ENDIF()
+
 SET(CMAKE_C_FLAGS "-g -Wall")
 SET(CMAKE_CXX_FLAGS "-g -Wall")
 
