Rename hostgame files to networkgame, remove test socket code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(Minigolf_SOURCE_FILES
 	physics.cpp
 	scorecard.cpp
 	about.cpp
-	hostgame.cpp
+	networkgame.cpp
 	highscores.cpp
 	object.cpp
 	)
