--- a/vs2010/src/Minigolf.vcxproj.filters
+++ b/vs2010/src/Minigolf.vcxproj.filters
@@ -22,6 +22,9 @@
     <ClCompile Include="C:\Users\Ricky\Dev\minigolf\src\about.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="C:\Users\Ricky\Dev\minigolf\src\networkgame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="C:\Users\Ricky\Dev\minigolf\src\highscores.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -40,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
-      <UniqueIdentifier>{0683C7B4-40A2-4F22-919A-34D1E9D09926}</UniqueIdentifier>
+      <UniqueIdentifier>{512E7AB6-5BE0-4B85-B2B3-F0410AA91FF1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
